--- a/src/main/resources/templates/my-tests.html
+++ b/src/main/resources/templates/my-tests.html
@@ -1,35 +1,164 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       lang="en">
-<head>
-    <title>Tests</title>
+<head th:fragment="head">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>TestingEz</title>
+    <link
+            rel="icon"
+            type="image/x-icon"
+            href="/images/school.png"
+    />
+    <link rel="stylesheet" href="/css/reset.css"/>
+    <link rel="stylesheet" href="/css/typography.css"/>
+    <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+    />
 </head>
-<body>
-<h1>Test List</h1>
-<table>
-    <thead>
-    <tr>
-        <th>Name</th>
-        <th>Status</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="test : ${paginatedTests}">
-        <td th:text="${test.name}">Name</td>
-        <td th:text="${test.status}">Status</td>
-    </tr>
-    </tbody>
-</table>
-<div>
-    <span th:text="'Page ' + ${paginatedTests.number + 1} + ' of ' + ${paginatedTests.totalPages}"></span>
-    <ul>
-        <li th:if="${paginatedTests.hasPrevious()}">
-            <a th:href="@{/tests(page=${paginatedTests.number - 1}, size=${paginatedTests.size})}">Previous</a>
-        </li>
-        <li th:if="${paginatedTests.hasNext()}">
-            <a th:href="@{/tests(page=${paginatedTests.number + 1}, size=${paginatedTests.size})}">Next</a>
-        </li>
-    </ul>
+<body class="font">
+<div class="d-flex flex-column vh-100 gap-3">
+    <header th:fragment="header" class="flex-shrink-0 border-bottom border-black shadow">
+        <nav class="navbar navbar-expand-lg bg-secondary">
+            <div class="container-fluid gap-1">
+                <a
+                        class="navbar-brand bg-light rounded shadow px-1 fs-5 border border-black border-2"
+                        th:href="@{/user/profile}"
+                >
+                    <img
+                            src="/images/astronaut.png"
+                            alt="default-avatar"
+                            width="35"
+                            height="35"
+                            class="d-inline-block align-text-middle me-1"
+                    /><span sec:authentication="name"></span></a
+                >
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup"
+                        aria-controls="navbarNavAltMarkup"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav justify-content-center gap-1 mt-3 mt-lg-0">
+                        <a
+                                class="nav-link text-center text-dark fs-5 link-light active"
+                                aria-current="page"
+                                th:href="@{/user/home}"
+                                th:text="#{headerHome}"
+                        >Home</a>
+                        <a
+                                class="nav-link text-center text-dark fs-5 link-light active"
+                                aria-current="page"
+                                th:href="@{/test/join}"
+                                th:text="#{joinTest}"
+                        >Join Test</a>
+                        <a
+                                class="nav-link text-center text-dark fs-5 link-light"
+                                th:href="@{/test/create}"
+                                th:text="#{createTest}"
+                        >Create Test</a>
+                        <a class="nav-link text-center text-dark fs-5 link-light" href="#" th:text="#{myResults}">
+                            My Results
+                        </a>
+                        <a class="nav-link text-center text-dark fs-5 link-light" th:href="@{/user/my-tests}"
+                           th:text="#{myTests}">
+                            My Tests
+                        </a>
+                        <a class="nav-link text-center text-dark fs-5 link-light"
+                           href="#"
+                           sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                           th:text="#{allTests}"
+                        >All Tests</a>
+                        <a class="nav-link text-center text-dark fs-5 link-light"
+                           href="#"
+                           sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
+                           th:text="#{allUsers}"
+                        >All Users</a>
+                    </div>
+                    <div class="navbar-nav ms-auto">
+                        <form
+                                class="text-center"
+                                method="post"
+                                th:action="@{/account/logout}">
+                            <button
+                                    class="bnt bg-light rounded shadow px-3 py-2 fs-5 text-center text-black mt-3 mt-lg-0 border border-black border-2"
+                                    type="submit"
+                                    th:text="#{logout}"
+                            >
+                                Log out
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="container d-flex flex-column justify-content-center align-items-center flex-grow-1">
+        <div class="container d-flex flex-column align-items-center justify-content-center gap-2 border border-2 shadow rounded p-3">
+            <div class="row justify-content-center align-items-center border border-2 shadow rounded"
+                 th:each="test, iStat : ${paginatedTests}">
+                <div class="col-sm-12 col-md-3">
+                    <span th:text="${iStat.index + 1} + '.' + ${test.name}"></span>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <span th:text="'Current status: ' + ${test.status}"></span>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <span th:text="'Last updated: ' + ${test.dateUpdated}"></span>
+                </div>
+                <div class="col-sm-12 col-md-3 text-end">
+                    <button class="btn btn-light px-3 border border-2 shadow rounded">
+                        details
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer th:fragment="footer" class="shadow rounded border-top border-black bg-secondary">
+        <div class="container-fluid">
+            <footer class="container bg-secondary">
+                <ul class="nav justify-content-center pb-3 mb-3">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{footerHome}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{features}">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{pricing}">Pricing</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{faqs}">FAQs</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link px-2 text-white fs-5" th:text="#{about}">About</a>
+                    </li>
+                </ul>
+                <p class="text-center text-white fs-5">© 2024 Company, Inc</p>
+            </footer>
+        </div>
+    </footer>
+    <div th:fragment="scripts">
+        <script
+                src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+                integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+                crossorigin="anonymous"
+        ></script>
+        <script
+                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+                integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+                crossorigin="anonymous"
+        ></script>
+    </div>
 </div>
 </body>
 </html>
