My Tests page works now, but button details do nothing

--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -53,7 +53,8 @@
                     <a class="nav-link text-center text-dark fs-5 link-light" href="#" th:text="#{myResults}">
                         My Results
                     </a>
-                    <a class="nav-link text-center text-dark fs-5 link-light" th:href="@{/user/my-tests}"
+                    <a class="nav-link text-center text-dark fs-5 link-light"
+                       th:href="@{/user/my-tests(page=0, size=5)}"
                        th:text="#{myTests}">
                         My Tests
                     </a>
