--- a/src/main/resources/templates/my-tests.html
+++ b/src/main/resources/templates/my-tests.html
@@ -102,9 +102,10 @@
             </div>
         </nav>
     </header>
-    <main class="container d-flex flex-column justify-content-center align-items-center flex-grow-1">
-        <div class="container d-flex flex-column align-items-center justify-content-center gap-2 border border-2 shadow rounded p-3">
-            <div class="row justify-content-center align-items-center border border-2 shadow rounded"
+
+    <main class="container d-flex flex-column justify-content-center flex-grow-1">
+        <div class="container shadow rounded border border-2 p-5">
+            <div class="row align-items-center border border-2 shadow rounded p-2 mb-2"
                  th:each="test, iStat : ${paginatedTests}">
                 <div class="col-sm-12 col-md-3">
                     <span th:text="${iStat.index + 1} + '.' + ${test.name}"></span>
@@ -120,6 +121,18 @@
                         details
                     </button>
                 </div>
+            </div>
+            <div class="d-flex justify-content-center gap-1">
+                <a class="btn btn-light text-center px-3 py-1 shadow rounded border border-2"
+                   th:href="@{/user/my-tests(page=${paginatedTests.number - 1}, size=${paginatedTests.size})}"
+                   th:if="${paginatedTests.hasPrevious()}">
+                    <img src="/images/left-arrow.png" alt="<<" style="width: 25px; height: auto;">
+                </a>
+                <a class="btn btn-light text-center px-3 py-1 shadow rounded border border-2"
+                   th:href="@{/user/my-tests(page=${paginatedTests.number + 1}, size=${paginatedTests.size})}"
+                   th:if="${paginatedTests.hasNext()}">
+                    <img src="/images/right-arrow.png" alt=">>" style="width: 25px; height: auto;">
+                </a>
             </div>
         </div>
     </main>
@@ -147,18 +160,16 @@
             </footer>
         </div>
     </footer>
-    <div th:fragment="scripts">
-        <script
-                src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-                integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-                crossorigin="anonymous"
-        ></script>
-        <script
-                src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-                integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-                crossorigin="anonymous"
-        ></script>
-    </div>
 </div>
+<script
+        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"
+></script>
+<script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"
+></script>
 </body>
 </html>
