My Tests page is now functioning, but button "details" do nothing (#36)
* js script added to reveal the answers on the questions on user-home.html

* working on my tests page, pagination is made, but no sorting and template

* working on my-tests.html

* My Tests page works now, but button details do nothing

--- a/src/main/resources/templates/fragments/headers.html
+++ b/src/main/resources/templates/fragments/headers.html
@@ -50,8 +50,14 @@
                             th:href="@{/test/create}"
                             th:text="#{createTest}"
                     >Create Test</a>
-                    <a class="nav-link text-center text-dark fs-5 link-light" href="#" th:text="#{myResults}">My Results</a>
-                    <a class="nav-link text-center text-dark fs-5 link-light" href="#" th:text="#{myTests}">My Tests</a>
+                    <a class="nav-link text-center text-dark fs-5 link-light" href="#" th:text="#{myResults}">
+                        My Results
+                    </a>
+                    <a class="nav-link text-center text-dark fs-5 link-light"
+                       th:href="@{/user/my-tests(page=0, size=5)}"
+                       th:text="#{myTests}">
+                        My Tests
+                    </a>
                     <a class="nav-link text-center text-dark fs-5 link-light"
                        href="#"
                        sec:authorize="hasRole('ROLE_ADMINISTRATOR')"
