--- a/TestingEz/src/main/resources/templates/my-results.html
+++ b/TestingEz/src/main/resources/templates/my-results.html
@@ -26,9 +26,10 @@
                     <span th:text="'Date: ' + ${result.completedAt}"></span>
                 </div>
                 <div class="col-sm-12 col-md-3 text-end">
-                    <button class="btn btn-light px-3 border border-2 border-black shadow rounded">
+                    <a class="btn btn-light px-3 border border-2 border-black shadow rounded"
+                       th:href="@{/results/details/id(id=${result.id})}">
                         details
-                    </button>
+                    </a>
                 </div>
             </div>
             <div class="d-flex justify-content-center gap-1">
