a with hred is now redirecting to: /results/details/{id}

--- a/TestingEz/src/main/resources/templates/my-results.html
+++ b/TestingEz/src/main/resources/templates/my-results.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="col-sm-12 col-md-3 text-end">
                     <a class="btn btn-light px-3 border border-2 border-black shadow rounded"
-                       th:href="@{/results/details/id(id=${result.id})}">
+                       th:href="@{/results/details/{id}(id=${result.id})}">
                         details
                     </a>
                 </div>
