--- a/TestingEz/src/main/resources/templates/result-details.html
+++ b/TestingEz/src/main/resources/templates/result-details.html
@@ -18,14 +18,14 @@
         <br>
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-8 col-lg-6 shadow rounded border border-2 p-3">
-<!--                <div class="p-2 rounded border border-2 mb-2"-->
-<!--                     th:each="questionData : ${questions}">-->
-<!--                    <p th:text="*{question}">Question?</p>-->
-<!--                    <p th:text="*{answer1}"></p>-->
-<!--                    <p th:text="*{answer2}"></p>-->
-<!--                    <p th:text="*{answer3}"></p>-->
-<!--                    <p th:text="*{answer4}"></p>-->
-<!--                </div>-->
+                <div class="p-2 rounded border border-2 mb-2"
+                     th:each="questionData : ${answeredQuestions}">
+                    <p th:text="${questionData.number} + '.' + ${questionData.question} + ' (' + ${questionData.points} + 'p.)'"></p>
+                    <p th:text="${questionData.answer1}"></p>
+                    <p th:text="${questionData.answer2}"></p>
+                    <p th:text="${questionData.answer3}"></p>
+                    <p th:text="${questionData.answer4}"></p>
+                </div>
             </div>
         </div>
     </main>
