--- a/TestingEz/src/main/resources/templates/result-details.html
+++ b/TestingEz/src/main/resources/templates/result-details.html
@@ -7,7 +7,8 @@
     <main class="container flex-grow-1">
         <div class="row justify-content-center">
             <div class="col-sm-12 col-md-8 col-lg-6 shadow text-center rounded border border-2"
-                 th:object="${resultDetails}">
+                 th:object="${resultDetails}"
+                 th:classappend="${resultDetails.status == 'PASS'} ? 'border-success' : 'border-danger'">
                 <h2 th:text="*{testName}"></h2>
                 <p th:text="'STATUS: ' + *{status}"></p>
                 <p th:text="'RESULT: ' + *{result}"></p>
@@ -22,13 +23,17 @@
                      th:each="questionData : ${answeredQuestions}">
                     <p th:text="${questionData.number} + '.' + ${questionData.question} + ' (' + ${questionData.points} + 'p.)'"></p>
                     <p th:text="${questionData.answer1}"
-                       th:classappend="${questionData.answer1 == questionData.correctAnswer} ? 'border border-2 border-success rounded ps-2' : ''"></p>
+                       th:classappend="${(questionData.answer1 == questionData.correctAnswer ? 'border border-2 border-success rounded ps-2' : '') +
+                       (questionData.answer1 == questionData.givenAnswer && questionData.answer1 != questionData.correctAnswer ? 'border border-2 border-danger rounded ps-2' : '')}"></p>
                     <p th:text="${questionData.answer2}"
-                       th:classappend="${questionData.answer2 == questionData.correctAnswer} ? 'border border-2 border-success rounded ps-2' : ''"></p>
+                       th:classappend="${(questionData.answer2 == questionData.correctAnswer ? 'border border-2 border-success rounded ps-2' : '') +
+                       (questionData.answer2 == questionData.givenAnswer && questionData.answer2 != questionData.correctAnswer ? 'border border-2 border-danger rounded ps-2' : '')}"></p>
                     <p th:text="${questionData.answer3}"
-                       th:classappend="${questionData.answer3 == questionData.correctAnswer} ? 'border border-2 border-success rounded ps-2' : ''"></p>
+                       th:classappend="${(questionData.answer3 == questionData.correctAnswer ? 'border border-2 border-success rounded ps-2' : '') +
+                       (questionData.answer3 == questionData.givenAnswer && questionData.answer3 != questionData.correctAnswer ? 'border border-2 border-danger rounded ps-2' : '')}"></p>
                     <p th:text="${questionData.answer4}"
-                       th:classappend="${questionData.answer4 == questionData.correctAnswer} ? 'border border-2 border-success rounded ps-2' : ''"></p>
+                       th:classappend="${(questionData.answer4 == questionData.correctAnswer ? 'border border-2 border-success rounded ps-2' : '') +
+                       (questionData.answer4 == questionData.givenAnswer && questionData.answer4 != questionData.correctAnswer ? 'border border-2 border-danger rounded ps-2' : '')}"></p>
                 </div>
             </div>
         </div>
