--- a/TestingEz/src/main/resources/templates/test-join.html
+++ b/TestingEz/src/main/resources/templates/test-join.html
@@ -4,52 +4,51 @@
 <body class="font">
 <div class="d-flex flex-column vh-100 gap-5">
     <div th:replace="~{fragments/headers :: header}"></div>
-
-    <main class="container d-flex justify-content-center align-items-center flex-grow-1">
-        <div class="row gap-3 flex-fill">
-            <div class="col-sm-1 flex-fill align-self-center">
-                <form
-                        novalidate
-                        th:method="post"
-                        th:object="${testJoinData}"
-                        th:action="@{/test/join}"
-                        id="testEntranceForm"
-                        class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column"
-                >
-                    <div class="mb-3 flex-fill text-center">
-                        <label for="testCode" class="form-label fs-4 text-white" th:text="#{enterTestCode}">
-                            Enter Test Code:
-                        </label>
-                        <input
-                                type="text"
-                                th:field="*{code}"
-                                class="form-control border border-black fs-6"
-                                id="testCode"
-                                placeholder="e.g., r%s12#t^"
-                                required
-                        />
-                        <div th:if="${testNotFound}" class="text-warning fs-6" th:text="#{testNotFound}">
-                            Sorry, we couldn't find this test!
+    <main class="d-flex align-items-center flex-grow-1">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-sm-10 col-md-6">
+                    <form
+                            novalidate
+                            th:method="post"
+                            th:object="${testJoinData}"
+                            th:action="@{/test/join}"
+                            id="testEntranceForm"
+                            class="bg-secondary rounded shadow border border-black border-2 p-5 d-flex flex-column">
+                        <div class="mb-3 flex-fill text-center">
+                            <label for="testCode" class="form-label fs-4 text-white" th:text="#{enterTestCode}">
+                                Enter Test Code:
+                            </label>
+                            <input
+                                    type="text"
+                                    th:field="*{code}"
+                                    class="form-control border border-black fs-6"
+                                    id="testCode"
+                                    placeholder="e.g., r%s12#t^"
+                                    required
+                            />
+                            <div th:if="${testNotFound}" class="text-warning fs-6" th:text="#{testNotFound}">
+                                Sorry, we couldn't find this test!
+                            </div>
+                            <div th:if="${testClosed}" class="text-warning fs-6" th:text="#{testClosed}">
+                                Sorry, seems like the test is closed!
+                            </div>
+                            <div th:if="${testCompleted}" class="text-warning fs-6">
+                                Sorry, you have already attended this test!
+                            </div>
+                            <div class="text-warning fs-6"
+                                 th:errors="*{code}"
+                                 th:if="${#fields.hasErrors('code')}">
+                            </div>
                         </div>
-                        <div th:if="${testClosed}" class="text-warning fs-6" th:text="#{testClosed}">
-                            Sorry, seems like the test is closed!
-                        </div>
-                        <div th:if="${testCompleted}" class="text-warning fs-6">
-                            Sorry, you have already attended this test!
-                        </div>
-                        <div class="text-warning fs-6"
-                             th:errors="*{code}"
-                             th:if="${#fields.hasErrors('code')}">
-                        </div>
-                    </div>
-                    <button
-                            type="submit"
-                            class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
-                            th:text="#{join}"
-                    >
-                        join
-                    </button>
-                </form>
+                        <button
+                                type="submit"
+                                class="btn bg-light text-black border border-black border-2 shadow rounded fs-5"
+                                th:text="#{join}">
+                            join
+                        </button>
+                    </form>
+                </div>
             </div>
         </div>
     </main>
