you can now post improvement ideas to /ninja/api/improvements/post and they will be processed, but no logic implemented to do so in testingez

--- a/TestingEz/src/main/resources/templates/user-home.html
+++ b/TestingEz/src/main/resources/templates/user-home.html
@@ -104,6 +104,7 @@
     <div th:replace="~{fragments/footers :: footer}"></div>
 </div>
 
+<!--TODO: The script can't send the request successfully-->
 <script src="/js/send-improvement-idea.js"></script>
 <script src="/js/clicker-game.js"></script>
 <script src="/js/guess-the-number-game.js"></script>
